# minekraft-dinner

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
lib/imgui/: imgui_impl_sdl2.cpp
res/tex/: atlas.kra
shaders/: fragment_shader.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex_shader.glsl
src/: main.cpp
src/engine/: light.cpp  light.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  skybox.cpp  skybox.hpp  texture.cpp  texture.hpp
src/engine/loaders/: objloader.cpp  objloader.hpp
src/engine/renderer/: camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  texture_manager.cpp  texture_manager.hpp
src/game/: player.cpp  player.hpp  world.cpp  world.hpp
src/terrain/: block.hpp  chunk.cpp  chunk.hpp  faces.hpp  noise_generator.cpp  noise_generator.hpp  perlin.cpp  perlin.hpp  terrain.cpp  terrain.hpp
